# github_action_example

./: .gitignore  README.md  pyproject.toml
src/: algorithm.py
src/cool_algorithm/: __init__.py  algorithm.py
src/cool_algorithm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_algorithm.py
